--- a/src/server/views/layout.html
+++ b/src/server/views/layout.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>{{ title }}</title>
     <link rel="stylesheet" href="lib/bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="lib/bower_components/font-awesome/css/font-awesome.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/css/main.css">
   </head>
   <body ng-app="eatable" style="background:#ecf0f1;" >
