--- a/src/server/views/index.html
+++ b/src/server/views/index.html
@@ -14,29 +14,21 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#" style="color:#fff;font-size: 24px;">{{ title }}</a>
+      <a class="navbar-brand" href="#/" style="color:#fff;font-size: 28px;">{{ title }}</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
       <ul class="nav navbar-nav navbar-right">
-        <!-- <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li> -->
+        <li><a href="#/" style="color:#fff;font-size: 18px;">Home</a></li>
+        <li><a href="#/admin" style="color:#fff;font-size: 18px;">Admin</a></li>
+
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-  <div class="container" ng-view style="margin-top:60px;">
+  <div class="" ng-view style="margin-top:60px;">
 
 
   </div>
